--- a/Resources/Private/Templates/Profile/Show.html
+++ b/Resources/Private/Templates/Profile/Show.html
@@ -1,16 +1,17 @@
-<html xmlns="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:layout name="Default">
+<html xmlns="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:nca="http://typo3.org/ns/WapplerSystems/Ncaext/ViewHelpers" data-namespace-typo3-fluid="true">
+	<f:layout name="Default" />
 
 
 	<f:section name="main">
-		<h1>Single View for Profile</h1>
 
-		<f:flashMessages/>
 
-		<f:render partial="Profile/Properties" arguments="{profile:profile}"
-		/>
-		<f:link.action action="list">Back to list</f:link.action>
+
+		<f:render partial="Profile/Properties" arguments="{profile:profile}" />
+
+		<hr />
+
+		<f:link.action class="btn btn-primary" action="list">Back to list</f:link.action>
 		<br/>
-		<f:link.action action="new">New Profile</f:link.action>
+		<f:link.action class="btn btn-primary" action="new">New Profile</f:link.action>
 	</f:section>
 </html>
