--- a/Resources/Private/Templates/Profile/List.html
+++ b/Resources/Private/Templates/Profile/List.html
@@ -1,43 +1,43 @@
 <html xmlns="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:layout name="Default"/>
+	<f:layout name="Default"/>
 
 
-<f:section name="main">
-	<h1>Listing for Profile</h1>
+	<f:section name="main">
+		<h1>Listing for Profile</h1>
 
-	<f:flashMessages/>
+		<f:flashMessages/>
 
-	<table class="table">
-		<tr>
-			<th>
-				<f:translate key="tx_ncaext_domain_model_profile.firstname"/>
-			</th>
-			<th>
-				<f:translate key="tx_ncaext_domain_model_profile.lastname"/>
-			</th>
-			<th></th>
-			<th></th>
-		</tr>
-
-		<f:for each="{profiles}" as="profile">
+		<table class="table">
 			<tr>
-				<td>
-					<f:link.action action="show" arguments="{profile : profile}"> {profile.firstname}</f:link.action>
-				</td>
-				<td>
-					<f:link.action action="show" arguments="{profile : profile}"> {profile.lastname}</f:link.action>
-				</td>
-				<td>
-					<f:link.action action="edit" arguments="{profile : profile}">Edit</f:link.action>
-				</td>
-				<td>
-					<f:link.action action="delete" arguments="{profile : profile}">Delete</f:link.action>
-				</td>
+				<th>
+					<f:translate key="tx_ncaext_domain_model_profile.firstname"/>
+				</th>
+				<th>
+					<f:translate key="tx_ncaext_domain_model_profile.lastname"/>
+				</th>
+				<th></th>
+				<th></th>
 			</tr>
 
-		</f:for>
-	</table>
+			<f:for each="{profiles}" as="profile">
+				<tr>
+					<td>
+						<f:link.action action="show" arguments="{profile : profile}"> {profile.firstname}</f:link.action>
+					</td>
+					<td>
+						<f:link.action action="show" arguments="{profile : profile}"> {profile.lastname}</f:link.action>
+					</td>
+					<td>
+						<f:link.action action="edit" class="btn btn-primary" arguments="{profile : profile}">Edit</f:link.action>
+					</td>
+					<td>
+						<f:link.action action="delete" class="btn btn-danger" arguments="{profile : profile}">Delete</f:link.action>
+					</td>
+				</tr>
 
-	<f:link.action class="btn btn-primary" action="new">New Profile</f:link.action>
-</f:section>
+			</f:for>
+		</table>
+
+		<f:link.action class="btn btn-primary" action="new">New Profile</f:link.action>
+	</f:section>
 </html>
